[project]
name = "yast"
version = "0.1.0"
description = "YAST - Yet Another SPLADE or Sparse Trainer"
authors = [
    {name = "Yuichi Tateno", email = "hotchpotch@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "torch>=2.7.0",
    "torchvision",
    "joblib>=1.1.0",
    "wandb>=0.16.0",
    "accelerate>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "yasem>=0.3.1",
    "fugashi>=1.3.2",
    "unidic-lite>=1.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yast"]

# PyTorch CUDA 12.8 configuration for uv
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
